AU-4: Added common WebComponentElement super class to take care of common infrastructure stuff like attaching the template to the shadow root. Also aligned the svg in the center of the page and fixed the menu on top of the screen, in case the graph is scrolled.

--- a/archunit-visual/src/main/app/report/menu/settings.css
+++ b/archunit-visual/src/main/app/report/menu/settings.css
@@ -13,7 +13,7 @@ div.settingsWrapper {
     display: inline-block;
     vertical-align: middle;
     margin: 2px;
-    padding: 10px 10px 0px 10px;
+    padding: 10px 10px 0 10px;
     text-align: left;
     border-radius: 25px;
     border: 1px solid #ccc;
